--- a/SharedPlaylistClient/App.config
+++ b/SharedPlaylistClient/App.config
@@ -10,7 +10,7 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://192.168.0.101:8081/SharedKanclPlaylistWCF/SharedKanclPlaylistWCFSvc"
+            <endpoint address="http://localhost:8081/SharedKanclPlaylistWCF/SharedKanclPlaylistWCFSvc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISharedKanclPlaylistWCFSvc"
                 contract="SharedKanclPlaylistWCFClient.ISharedKanclPlaylistWCFSvc"
                 name="BasicHttpBinding_ISharedKanclPlaylistWCFSvc" />
