--- a/SharedKanclPlaylist/App.config
+++ b/SharedKanclPlaylist/App.config
@@ -19,7 +19,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.6.107:8081/SharedKanclPlaylistWCF/SharedKanclPlaylistWCFSvc"
+      <endpoint address="http://192.168.0.101:8081/SharedKanclPlaylistWCF/SharedKanclPlaylistWCFSvc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISharedKanclPlaylistWCFSvc"
         contract="SharedKanclPlaylistWCFClient.ISharedKanclPlaylistWCFSvc"
         name="BasicHttpBinding_ISharedKanclPlaylistWCFSvc" />
@@ -36,7 +36,7 @@
         <endpoint address="SharedKanclPlaylistWCFSvc" binding="basicHttpBinding" contract="SharedKanclPlaylistWCFSvc.ISharedKanclPlaylistWCFSvc"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://192.168.6.107:8081/SharedKanclPlaylistWCF"/>
+            <add baseAddress="http://localhost:8081/SharedKanclPlaylistWCF"/>
           </baseAddresses>
         </host>
       </service>
