--- a/SharedKanclPlaylistWCFSvc/App.config
+++ b/SharedKanclPlaylistWCFSvc/App.config
@@ -30,7 +30,7 @@
         <endpoint address="SharedKanclPlaylistWCFSvc" binding="basicHttpBinding" contract="SharedKanclPlaylistWCFSvc.ISharedKanclPlaylistWCFSvc" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://192.168.6.107:8081/SharedKanclPlaylistWCF" />
+            <add baseAddress="http://localhost:8081/SharedKanclPlaylistWCF" />
           </baseAddresses>
         </host>
       </service>
